--- a/views/host.jade
+++ b/views/host.jade
@@ -39,4 +39,4 @@ block content
 		bp.roomId = #{roomId};
 		bp.title = "#{title}";
 	script(src="/socket.io/socket.io.js")
-	script(src="/javascripts/client.js")
+	script(src="/javascripts/host.js")
