--- a/views/httpError.jade
+++ b/views/httpError.jade
@@ -6,6 +6,8 @@ block mainContent
 		.errorCard.visible.showValue
 			.cardInner
 				.cardValue #{status}
-				.cornerValue.topleft #{status}
-				.cornerValue.bottomright #{status}
+				.cornerValue.topleft 
+					.fa.fa-exclamation-triangle
+				.cornerValue.bottomright 
+					.fa.fa-exclamation-triangle
 		p Head back to <a href="/">bitpoints.io</a>
