--- a/views/join.jade
+++ b/views/join.jade
@@ -35,4 +35,4 @@ block content
 		bp.avatar = "#{avatar}";
 		bp.user = "#{user}";
 	script(src="/socket.io/socket.io.js")
-	script(src="/javascripts/clientVoter.js")
+	script(src="/javascripts/join.js")
