--- a/views/kick.jade
+++ b/views/kick.jade
@@ -3,3 +3,4 @@ extends layout
 block content
 	#kick
 		p Sorry #{user}, you've been removed from room #{roomId}
+		p Return to <a href="/">bitpoints.io</a>
