--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -426,21 +426,18 @@ table#estimateOptions {
 	}
 }
 
-div#cardStylePop {
-	display: none;
-	position: absolute;
-	top: 50%; left: 50%;
-	width: 180px;
-	height: 120px;
-	padding: 20px;
-	margin: -100px 0 0 -110px;
-	background: #fff;
-	.box-shadow(0 3px 5px 1px rgba(0, 0, 0, .6));
-	.border-radius(5px);
+#cardStylePop-modal-container {
 	label {
 		display: block;
 		width: 150px;
-		color: @primaryColor;
+		color: @darktext;
+
+		select, input {
+			margin-top: 5px;
+		}
+	}
+	label + label {
+		margin-top: 10px;
 	}
 	select#pattern {
 		width: 150px;
@@ -636,6 +633,7 @@ ul#users {
  * Modal styles
  */
 .bp-modal-cover {
+	display: none;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -643,8 +641,13 @@ ul#users {
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,0.5);
+
+	&.visible {
+		display: block;
+	}
 }
 .bp-modal-container {
+	display: none;
 	position: absolute;
 	top: 300px;
 	left: 50%;
@@ -654,11 +657,15 @@ ul#users {
 	padding: 30px;
 	margin-left: -150px;
 	background: white;
-	.border-radius(20px);
+	.border-radius(10px);
 	.box-shadow(0 0 10px 10px rgba(0,0,0,0.5));
 	color: @darktext;
 	font-size: 1.5em;
 	line-height: 1em;
+
+	&.visible {
+		display: block;
+	}
 
 	.bp-modal-close {
 		position: absolute;
@@ -673,6 +680,7 @@ ul#users {
 
 	&.bp-modal-large {
 		padding: 50px;
+		.border-radius(20px);
 		width: 700px;
 		margin-left: -350px;
 		font-size: 3em;
@@ -681,7 +689,8 @@ ul#users {
 	}
 
 	&.bp-modal-small {
-		padding: 10px;
+		padding: 15px;
+		.border-radius(5px);
 		width: 250px;
 		margin-left: -125px;
 		font-size: 1em;
