users consist of multiple properties, so rename 'user' to 'name' for clarity

--- a/views/host.jade
+++ b/views/host.jade
@@ -36,7 +36,9 @@ block content
 		ul#users
 
 	script.
-		BP.roomId = #{roomId};
-		BP.title = "#{title}";
+		BP.room = {
+			id: #{roomId},
+			title: "#{title}"
+		};
 	script(src="/socket.io/socket.io.js")
 	script(src="/javascripts/host.js")
