--- a/views/kick.jade
+++ b/views/kick.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
 	#kick
-		p Sorry #{user}, you've been removed from room #{roomId}
+		p Sorry #{name}, you've been removed from room #{roomId}
 		p Return to <a href="/">bitpoints.io</a>
