--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block mainContent
 				span Join a Room In Progress
 			form(id="join", action="/join")
 				input#room-id.halfwidth(name='room-id',type='text',placeholder='Room ID*',data-required='true')
-				input#user.halfwidth(name='user',type='text',placeholder='Name*',data-required='true')
+				input#name.halfwidth(name='name',type='text',placeholder='Name*',data-required='true')
 				input#email(name='email',type='text',placeholder='Gravatar Email')
 				input(type='submit', value='Join a Room')#join-room
 		div#stats.
