--- a/views/invite.jade
+++ b/views/invite.jade
@@ -6,7 +6,7 @@ block mainContent
 		div.join
 			form(id="join", action="/join")
 				input#room-id(name='room-id',type='hidden',value='#{room.roomId}')
-				input#user(name='user',type='text',placeholder='Name',data-required='true')
+				input#name(name='name',type='text',placeholder='Name',data-required='true')
 				input#email(name='email',type='text',placeholder='Gravatar Email')
 				input(type='submit', value='Join Room')#join-room
 		p or, go to <a href="/">bitpoints.io</a>
