create a Notification utility for Firefox/Chrome notifications

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -299,6 +299,21 @@ html {
 				text-align: right;
 				font-size: 80%;
 			}
+			.roomOptions {
+				display: none;
+				label {
+					input {
+
+					}
+					span {
+						padding-left: 8px;
+						vertical-align: middle;
+					}
+				}
+				&.visible {
+					display: block;
+				}
+			}
 		}
 	}
 
