Allow host to disregard a voter who is learning to estimate (or a technical product owner that feels left out)

--- a/public/stylesheets/lib.less
+++ b/public/stylesheets/lib.less
@@ -40,10 +40,15 @@
 	-webkit-border-bottom-right-radius: @radius;
 	border-bottom-right-radius: @radius;
 }
-.border-radius-bl(@radius) {
-	-moz-border-radius-bottom-left: @radius;
-	-webkit-border-bottom-left-radius: @radius;
-	border-bottom-left-radius: @radius;
+.border-radius-tr(@radius) {
+	-moz-border-radius-top-right: @radius;
+	-webkit-border-top-right-radius: @radius;
+	border-top-right-radius: @radius;
+}
+.border-radius-br(@radius) {
+	-moz-border-radius-bottom-right: @radius;
+	-webkit-border-bottom-right-radius: @radius;
+	border-bottom-right-radius: @radius;
 }
 
 .box-sizing(@val: border-box) {
