JavaScript typing beat me... again. Also, rename 'probation' to 'observer'

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -605,7 +605,7 @@ ul#users {
 		.card {
 			.cardStyle();
 		}
-		.kickVoter, .toggleProbation {
+		.kickVoter, .ಠ_ಠ {
 			display: none;
 			position: absolute;
 			right: 3px;
@@ -618,7 +618,7 @@ ul#users {
 			border-width: 1px 1px 1px 0;
 			cursor: pointer;
 		}
-		.toggleProbation {
+		.ಠ_ಠ {
 			top: 34px;
 			.border-radius-tr(5px);
 			background: #ff9500;
@@ -636,12 +636,12 @@ ul#users {
 		}
 
 		&:hover {
-			.kickVoter, .toggleProbation {
+			.kickVoter, .ಠ_ಠ {
 				display: block;
 			}
 		}
 
-		&[data-probation="true"] {
+		&[data-observer="true"] {
 			opacity: .6;
 		}
 	}
