Show the room name for the voter instead of ID

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -237,7 +237,7 @@ html {
 					span {
 						display: inline-block;
 						position: relative;
-					
+
 
 						&:before, &:after {
 						  content: "";
@@ -248,13 +248,13 @@ html {
 						  width: 600px;
 						}
 
-						&:before { 
+						&:before {
 							right: 100%;
-	  						margin-right: 10px; 
+	  						margin-right: 10px;
 	  					}
-						&:after { 
+						&:after {
 							left: 100%;
-	  						margin-left: 10px; 
+	  						margin-left: 10px;
 	  					}
 	  				}
 				}
@@ -546,6 +546,11 @@ body { perspective: 1000; }
 			}
 		}
 	}
+}
+
+#roomName {
+	display: inline-block;
+	margin-left: 8px;
 }
 
 #average,
