--- a/views/join.jade
+++ b/views/join.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-	#voterRoomInfo Room: #{room.roomId} 
+	#voterRoomInfo Room:
+		#roomName #{room.roomId}
 		.status.newRound
 			| Choose a card
 			span#ticketInfo
