Get host from front end for invite link
This way we don't need to rely on config files to get the refer link
right.

--- a/views/host.jade
+++ b/views/host.jade
@@ -22,12 +22,13 @@ block content
 					.dropItem
 						span.title Invite URL:
 						.control
-							span #{appHost}/#{inviteId}
-								i.fa.fa-share-square-o#showLink(data-link="#{appHost}/#{inviteId}")
+							span
+								span#inviteUrl #{inviteId}
+								i.fa.fa-share-square-o#showLink(data-link="#{inviteId}")
 
 		button#toggleRound Begin Estimating
 
-		#average The average estimate is 
+		#average The average estimate is
 			span.val
 		#largeSpread Looks like there's some uncertainty about this estimate...
 
