add t-shirt sizes

--- a/views/host.jade
+++ b/views/host.jade
@@ -23,6 +23,10 @@ block content
 								label(for="letters")
 									input(type="radio", value="letters", name="deckType", id="letters")
 									span Letters
+							.option
+								label(for="tshirt")
+									input(type="radio", value="tshirt", name="deckType", id="tshirt")
+									span T-Shirt Sizes
 					.dropItem
 						span.title Invite URL:
 						.control
