Add theme-color meta tag for Lollipop
Adding the theme-color meta tag makes lollipop color the notification
bar to match the website.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
 	head
 		title BitPoints
+		meta(name="theme-color" content="#1273f9")
 		meta(name="viewport" content="width=device-width, initial-scale=1, user-scalable=no")
 		link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
