don't send people to a domain squatter page

--- a/views/external.jade
+++ b/views/external.jade
@@ -9,12 +9,12 @@ block content
 		#supplementalContent
 			block supplementalContent
 		footer
-			| Proudly made in DC 
+			| Proudly made in DC
 			a(href="http://proudlymadeindc.com/", target="_blank").dcBadge
-			|  by 
+			|  by
 			a(href="http://i.ammichael.com/", target="_blank") Michael
-			| , 
-			a(href="http://www.spaceforaname.com/", target="_blank") Jack</a>
-			| , &amp; 
+			| ,
+			a(href="https://github.com/jackwanders", target="_blank") Jack</a>
+			| , &amp;
 			a(href="http://nickswider.com/", target="_blank") Nick</a>
 	script(src='/javascripts/home.js')
