Github page links. That's change I can believe in.

--- a/views/external.jade
+++ b/views/external.jade
@@ -12,7 +12,7 @@ block content
 			| Proudly made in DC
 			a(href="http://proudlymadeindc.com/", target="_blank").dcBadge
 			|  by
-			a(href="http://i.ammichael.com/", target="_blank") Michael
+			a(href="https://github.com/twisterghost", target="_blank") Michael
 			| ,
 			a(href="https://github.com/jackwanders", target="_blank") Jack</a>
 			| , &amp;
