Use monospace font for quick url
This helps to distinguish between some characters

Fixes #20

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -741,6 +741,7 @@ ul#users {
 		font-size: 3em;
 		line-height: 1em;
 		text-align: center;
+		font-family: 'Courier New';
 	}
 
 	&.bp-modal-small {
