--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -4,171 +4,16 @@
  */
 
 @import "lib";
+@import "variables";
+@import "reset";
+@import "mixins";
+@import "external";
+@import "kicked";
+@import "modal";
+@import "voterRoom";
+@import "hostRoom";
+@import "error";
 @import url(http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,300,400);
-
-/**
- * LESS variables
- */
-@text: #e3e3e3;
-@darktext: #555;
-@link: #fff;
-@hover: darken(@link,15%);
-@primaryColor: #2581FF;
-@accentColor: #E8800C;
-@errorColor: #FF4136;
-@selection: desaturate(darken(@primaryColor,5%),5%);
-@sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
-@serif: Georgia, Cambria, "Times New Roman", Times, serif;
-@title: "Alegreya Sans SC", sans-serif;
-
-/**
- * LESS Mixins
- */
-.button(@color: @accentColor){
-	padding: 0 10px;
-	height: 1.875em;
-	border: none;
-	font: normal 1.2em/1.875em @title;
-	background: @color;
-	color: @darktext;
-	cursor: pointer;
-	.border-radius(6px);
-	transition: background-color 0.3s ease;
-	&:hover {
-		background: desaturate(darken(@color,5%),5%);
-	}
-}
-
-.iconLight() {
-	color: @link;
-	&:hover {
-		color: @hover;
-	}
-}
-
-.iconDark() {
-	color: @darktext;
-	&:hover {
-		color: darken(@darktext,20%);
-	}
-}
-
-
-.cardStyle(@size: 1) {
-	position: absolute;
-	width: 200px * @size;
-	height: 270px * @size;
-	left: 0;
-	top: 5000px;
-	&.visible { top: 180px; }
-	-webkit-transition: 1.5s;
-	transition: 1.5s;
-	-webkit-transform-style: preserve-3d;
-	-ms-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-	&.showValue {
-		.transform(rotateY(180deg));
-	}
-	&.spin {
-		-webkit-transition: 5s;
-		transition: 5s;
-		.transform(rotateY(5940deg));
-	}
-	.cardInner, .cardBack {
-		width: 100%;
-		height: 100%;
-		.box-sizing(border-box);
-		position: absolute;
-		top: 0; left: 0;
-		border: 10px*@size solid #fff;
-		.border-radius(5px * @size);
-		.box-shadow(0 0 3px rgba(0,0,0,0.5));
-		.backface-visibility(hidden);
-	}
-	.cardBack {
-		background-repeat: repeat;
-		background-position: 50% 50%;
-		&.argyle {
-			background-image: -webkit-repeating-linear-gradient(-30deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px), -webkit-repeating-linear-gradient(30deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px), -webkit-linear-gradient(30deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1)), -webkit-linear-gradient(-30deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1));
-			background-size: 70px*@size 120px*@size;
-		}
-		&.denim {
-			background-image: url('/images/texture_denim.png');
-		}
-		&.graphpaper {
-			background-image: url('/images/texture_graphpaper.png');
-		}
-		&.paisley {
-			background-image: url('/images/texture_paisley.png');
-			background-size: 100%*@size;
-		}
-		&.wood {
-			background-image: url('/images/texture_wood.png');
-			background-size: 230px*@size;
-		}
-		&.goat {
-			background-image: url('/images/texture_goat.png');
-			background-repeat: no-repeat;
-			background-position: 95% 100%;
-			background-size: 150px*@size;
-		}
-	}
-	.cardInner {
-		background-color: #fff;
-		.transform(rotateY(180deg));
-		.cardValue,
-		.cornerValue {
-			color: @darktext;
-			.fa {
-				.iconDark();
-			}
-		}
-		.cardValue {
-			text-align: center;
-			position: relative;
-			font-size: 6em * @size;
-			font-weight: normal;
-			line-height: 250px * @size;
-			font-family: @sans;
-			&.min { color: #000fd2; }
-			&.max { color: #d21900; }
-		}
-		.cornerValue {
-			position: absolute;
-			font-size: 1.25em * @size;
-			font-weight: normal;
-			line-height: 1em;
-			font-family: @sans;
-			width: 50px;
-			text-align: left;
-
-			&.topleft {
-				top: 0;
-				left: 0;
-			}
-			&.bottomright {
-				bottom: 0;
-				right: 0;
-				.rotate(180deg);
-			}
-		}
-	}
-}
-
-/**
- * Reset styles
- */
-html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, del, em, font, img, small, strike, strong, dl, dt, dd, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, nav, menu {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
-}
-body { line-height: 1; }
-ol, ul { list-style: none; }
 
 /**
  * Base document styles
@@ -201,573 +46,6 @@ html {
 
 		::selection { background: @selection; }
 		::-moz-selection { background: @selection; }
-	}
-}
-
-/**
- * External page styles
- */
-#external {
-	position: relative;
-	margin: 120px 120px 0;
-
-	#mainContent {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 400px;
-		header {
-			h1 {
-				font: 600 4em/1em @title;
-				text-indent: -9999px;
-				background: url('/images/logo-white-800.png') no-repeat center left;
-				background-size: contain;
-				background-origin: content-box;
-				color: @link;
-				height: 70px;
-			}
-		}
-		#actions {
-			.join, .create {
-				position: relative;
-				width:400px;
-				margin-top: 50px;
-
-				h2 {
-					font: 400 1.2em/1.4em @title;
-					color: @link;
-					overflow: hidden;
-					text-align: center;
-
-					span {
-						display: inline-block;
-						position: relative;
-
-
-						&:before, &:after {
-							content: "";
-							position: absolute;
-							height: 1px;
-							border-top: 1px solid white;
-							top: 50%;
-							width: 600px;
-						}
-
-						&:before {
-							right: 100%;
-								margin-right: 10px;
-							}
-						&:after {
-							left: 100%;
-								margin-left: 10px;
-							}
-						}
-				}
-
-				input[type=text] {
-					.box-sizing(border-box);
-					width: 100%;
-					height: 36px;
-					margin: 5px 0;
-					padding: 0 11px;
-					font: 400 1em/34px @sans;
-					color: @darktext;
-					border: 1px solid white;
-					background: white;
-					.border-radius(6px);
-
-					&.error {
-						border-color: @errorColor;
-						.box-shadow(0 0 4px 2px fadeOut(@errorColor,30%));
-					}
-				}
-
-				input[type=submit] {
-					.button();
-					.box-sizing(border-box);
-					width: 100%;
-					margin-top: 5px;
-				}
-
-				input.halfwidth {
-					display: inline-block;
-					width: 48.75%;
-					margin-right: 1.25%;
-				}
-
-				.halfwidth + .halfwidth {
-					margin-right: 0 !important;
-					margin-left: 1.25% !important;
-				}
-			}
-			#stats {
-				text-align: right;
-				font-size: 80%;
-			}
-			.roomOptions {
-				display: none;
-				label {
-					input {
-
-					}
-					span {
-						padding-left: 8px;
-						vertical-align: middle;
-					}
-				}
-				&.visible {
-					display: block;
-				}
-			}
-		}
-	}
-
-	#supplementalContent {
-		margin-left: 500px;
-		padding-top: 50px;
-		ul {
-			margin-bottom: 30px;
-			li {
-				font: 200 2em/2em @sans;
-				letter-spacing: 1px;
-			}
-		}
-	}
-
-	footer {
-		clear: both;
-		margin-top: 50px;
-		text-align: center;
-		.dcBadge {
-			display: inline-block;
-			width: 17px;
-			height: 13px;
-			background: url('/images/dc-badge.png') no-repeat 0 0;
-			background-size: contain;
-		}
-		a {
-			font-weight: bold;
-		}
-	}
-}
-
-// Variation for single-column external pages
-body.one-column {
-	#external {
-		#mainContent {
-			position: static;
-			width: 800px;
-			margin: 0 auto;
-
-			header {
-				h1 {
-					background-position: center center;
-				}
-			}
-			#actions {
-				p {
-					text-align: center;
-				}
-				.join {
-					margin: 50px auto;
-				}
-			}
-		}
-	}
-}
-
-/**
- * Voter room styles
- */
-#voterRoomInfo {
-	display: block;
-	height: 30px;
-	padding: 0 20px;
-	background: rgba(0,0,0,0.5);
-	line-height: 30px;
-	font-size: 14px;
-	font-weight: bold;
-
-	.status {
-		float: right;
-		display: none;
-	}
-}
-
-#voterInfo {
-	position: relative;
-	margin: 10px auto;
-	max-width: 500px;
-
-	.voterName,.voterImage {
-		margin-left: 0;
-	}
-
-	#cardStyle {
-		position: absolute;
-		top: 0;
-		left: 170px;
-		h4 {
-			height: 32px;
-			text-align: center;
-		}
-		#cardPreview {
-			.cardStyle(.45);
-			position: relative;
-			top: auto; left: auto;
-			.box-sizing();
-		}
-	}
-}
-
-table#estimateOptions {
-	width: 100%;
-	border-spacing: 10px;
-	td {
-		width: 33%;
-		font: normal 2.5em/2.5em @sans;
-		text-align: center;
-		color: @darktext;
-		border-radius: 3px;
-		cursor: pointer;
-		background: @link;
-		&:hover {
-			background: @hover;
-		}
-		&.lastVote {
-			background: darken(@link,20%);
-		}
-		&.blank {
-			background: none !important;
-		}
-		.fa {
-			.iconDark();
-		}
-	}
-}
-
-#cardStylePop-modal-container {
-	label {
-		display: block;
-		width: 150px;
-		color: @darktext;
-
-		select, input {
-			margin-top: 5px;
-		}
-	}
-	label + label {
-		margin-top: 10px;
-	}
-	select#pattern {
-		width: 150px;
-		text-transform: capitalize;
-	}
-	input#color {
-		width: 150px;
-	}
-	.close {
-		width: 20px;
-		height: 20px;
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		font-size: 1.4em;
-		cursor: pointer;
-	}
-}
-
-/**
- * Host room styles
- */
-body { perspective: 1000; }
-
-#room {
-	margin: 30px;
-}
-
-#toggleRound {
-	.button(@accentColor);
-	float: left;
-	.voting & {
-		.button(@primaryColor);
-	}
-}
-
-#settings {
-	position: absolute;
-	top: 30px;
-	right: 30px;
-
-	li {
-		position: relative;
-		.fa {
-			cursor: pointer;
-		}
-		.drop {
-			display: none;
-			position: absolute;
-			top: 42px;
-			right: -12px;
-			z-index: 10;
-			width: 300px;
-			padding: 12px;
-			background: white;
-			.border-radius(12px);
-			color: @darktext;
-
-			&:before {
-				content: '';
-				position: absolute;
-				top: -6px;
-				right: 20px;
-				display: block;
-				height: 12px;
-				width: 12px;
-				.rotate(45deg);
-				background: white;
-			}
-
-			&.active {
-				display: block;
-			}
-
-			.dropItem + .dropItem {
-				margin-top: 10px;
-			}
-
-			.title {
-				font-weight: bold;
-				width: 130px;
-				display: inline-block;
-				vertical-align: top;
-				line-height: 2em;
-			}
-			.control {
-				display: inline-block;
-				vertical-align: top;
-			}
-			.fa {
-				padding-left: 6px;
-				cursor: pointer;
-				.iconDark();
-			}
-		}
-	}
-}
-
-#roomName {
-	display: inline-block;
-	margin-left: 8px;
-}
-
-#average,
-#largeSpread {
-	display: none;
-	float: left;
-	margin-left: 1.875em;
-	font-size: 1.2em;
-	line-height: 1.875em;
-
-	.val {
-		display: inline-block;
-		margin: -3px 0;
-		padding: 0 10px;
-		border: 1px solid rgba(255, 255, 255, 0.3);
-		font-weight: bold;
-		background: rgba(0, 0, 0, 0.25);
-		border-radius: 5px;
-	}
-}
-
-#ticket {
-	float: left;
-	margin-left: 1.875em;
-	font-size: 1.2em;
-	line-height: 1.875em;
-	.key {
-		font-weight: bold;
-	}
-	.title {
-	}
-}
-
-.voterImage {
-	display: block;
-	padding: 25px 25px 0;
-	margin-left: 24px;
-	border: solid rgba(255,255,255,0.25);
-	border-width: 1px 1px 0;
-	.border-radius(10px 10px 0 0);
-	background: rgba(0,0,0,0.25)
-}
-.voterName {
-	display: block;
-	height: 40px;
-	width: 150px;
-	margin-left: 24px;
-	border: solid rgba(255,255,255,0.25);
-	border-width: 0 1px 1px;
-	.border-radius(0 0 10px 10px);
-	line-height: 40px;
-	text-align: center;
-	background: rgba(0,0,0,0.25);
-}
-
-ul#users {
-	clear: both;
-	width: 100%;
-	li {
-		float: left;
-		position: relative;
-		width: 200px;
-		height: 425px;
-		margin: 20px;
-		.card {
-			.cardStyle();
-		}
-		.kickVoter, .ಠ_ಠ {
-			display: none;
-			position: absolute;
-			right: 3px;
-			width: 20px;
-			height: 40px;
-			line-height: 38px;
-			text-align: center;
-			color: white;
-			border: solid rgba(255,255,255,0.5);
-			border-width: 1px 1px 1px 0;
-			cursor: pointer;
-		}
-		.ಠ_ಠ {
-			top: 34px;
-			.border-radius-tr(5px);
-			background: #ff9500;
-			&:hover {
-				background: darken(#ff9500, 2);
-			}
-		}
-		.kickVoter {
-			top: 76px;
-			.border-radius-br(5px);
-			background: rgb(211, 39, 39);
-			&:hover {
-				background: darken(rgb(211, 39, 39), 2);
-			}
-		}
-
-		&:hover {
-			.kickVoter, .ಠ_ಠ {
-				display: block;
-			}
-		}
-
-		&[data-observer="true"] {
-			opacity: .6;
-		}
-	}
-}
-
-/**
- * Kicked voter page styles
- */
-#kick {
-	margin: 50px;
-	background: rgba(0,0,0,0.5);
-	border: 1px solid black;
-	.border-radius(10px);
-	padding: 10px;
-
-	p {
-		margin: 0;
-		text-align: center;
-	}
-}
-
-/**
- * Modal styles
- */
-.bp-modal-cover {
-	display: none;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 3000;
-	width: 100%;
-	height: 100%;
-	background: rgba(0,0,0,0.5);
-
-	&.visible {
-		display: block;
-	}
-}
-.bp-modal-container {
-	display: none;
-	position: absolute;
-	top: 300px;
-	left: 50%;
-	z-index: 3001;
-	.box-sizing();
-	width: 300px;
-	padding: 30px;
-	margin-left: -150px;
-	background: white;
-	.border-radius(10px);
-	.box-shadow(0 0 10px 10px rgba(0,0,0,0.5));
-	color: @darktext;
-	font-size: 1.5em;
-	line-height: 1em;
-
-	&.visible {
-		display: block;
-	}
-
-	.bp-modal-close {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		width: 20px;
-		height: 20px;
-		font-size: 20px;
-		line-height: 20px;
-		cursor: pointer;
-	}
-
-	&.bp-modal-large {
-		padding: 50px;
-		.border-radius(20px);
-		width: 700px;
-		margin-left: -350px;
-		font-size: 3em;
-		line-height: 1em;
-		text-align: center;
-		font-family: 'Courier New';
-	}
-
-	&.bp-modal-small {
-		padding: 15px;
-		.border-radius(5px);
-		width: 250px;
-		margin-left: -125px;
-		font-size: 1em;
-		line-height: 1em;
-	}
-}
-
-/**
- * Error page styles
- */
-#error {
-	padding-top: 20px;
-	overflow: hidden;
-	.errorCard {
-		.cardStyle(1.5);
-		position: static;
-		margin: 0 auto;
-	}
-	p {
-		margin: 20px 0;
-		text-align: center;
 	}
 }
 
