--- a/views/join.jade
+++ b/views/join.jade
@@ -3,11 +3,13 @@ extends layout
 block content
 	#voterRoomInfo Room:
 		#roomName #{room.roomId}
-		.status.newRound
-			| Choose a card
-			span#ticketInfo
-		.status.roundEnd Round is over
+		#voterList Players:
+			.avatars
 	#voterInfo
+		.status.newRound
+			| Voting is open - choose a card
+			span#ticketInfo
+		.status.roundEnd Voting is closed
 		img.voterImage#avatar(src='#{user.avatar}')
 		h3.voterName #{user.name}
 		#cardStyle
@@ -15,7 +17,7 @@ block content
 			div#cardPreview
 				div.cardBack.argyle(style='background-color:#{user.cardColor}')
 
-		table#estimateOptions
+		table#estimateOptions.roundEnd
 
 	script.
 		BP.room = !{JSON.stringify(room)};
