fix some mobile style problems re avatars

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -125,6 +125,16 @@ html {
 		padding-top: 80px;
 	}
 
+	#voterRoomInfo {
+		padding: 5px 10px;
+
+		.voterImageSmall {
+			width: 20px;
+			height: 20px;
+			margin: 0 0 0 5px;
+		}
+	}
+
 	table#estimateOptions {
 		td {
 			font-size: 2em;
