--- a/public/stylesheets/voterRoom.less
+++ b/public/stylesheets/voterRoom.less
@@ -3,26 +3,21 @@
  */
 #voterRoomInfo {
 	display: block;
-	height: 60px;
-	padding: 0 20px;
+	padding: 10px 20px;
 	background: rgba(0,0,0,0.5);
-	line-height: 60px;
 	font-size: 14px;
 	font-weight: bold;
 
-	#voterList {
-		float: right;
-
-		.avatars {
-			float: right;
-		}
+	#voterList .avatars {
+		display: inline-block;
+		vertical-align: middle;
 	}
 
 	.voterImageSmall {
 		float: left;
 		height: 30px;
 		width: 30px;
-		margin: 15px 5px;
+		margin: 0 0 0 5px;
 	}
 }
 
@@ -33,14 +28,15 @@
 
 	.status {
 		display: none;
-		width: 100%;
 		height: 20px;
 		padding: 10px;
 		margin: 10px 0;
 		border-radius: 6px;
 		line-height: 20px;
 		background: rgba(0,0,0,0.5);
-		color: white;
+		color: @text;
+		font-size: 14px;
+		font-weight: bold;
 
 		&.roundEnd {
 			display: block;
@@ -48,6 +44,7 @@
 
 		&.newRound {
 			background: @accentColor;
+			color: white;
 		}
 	}
 
