--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -13,7 +13,7 @@
 @import "voterRoom";
 @import "hostRoom";
 @import "error";
-@import url(http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,300,400);
+@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,300,400);
 
 /**
  * Base document styles
