consolidate invite/join logic

--- a/public/stylesheets/hostRoom.less
+++ b/public/stylesheets/hostRoom.less
@@ -15,6 +15,24 @@ body { perspective: 1000; }
 	}
 }
 
+#roomId {
+	position: fixed;
+	bottom: 1rem;
+	right: 1rem;
+
+	.text {
+		border-bottom: 1px solid;
+		font-size: 2.5rem;
+		line-height: 3.5rem;
+		text-align: right;
+	}
+
+	.id {
+		font-size: 7rem;
+		line-height: 7rem;
+	}
+}
+
 #settings {
 	position: absolute;
 	top: 30px;
