--- a/views/external.jade
+++ b/views/external.jade
@@ -9,12 +9,12 @@ block content
 		#supplementalContent
 			block supplementalContent
 		footer
-			| Proudly made in DC
+			| Proudly made in DC&nbsp;
 			a(href="http://proudlymadeindc.com/", target="_blank").dcBadge
-			|  by
+			|  by&nbsp;
 			a(href="https://github.com/twisterghost", target="_blank") Michael
-			| ,
+			| ,&nbsp;
 			a(href="https://github.com/jackwanders", target="_blank") Jack</a>
-			| , &amp;
+			| , &amp;&nbsp;
 			a(href="http://nickswider.com/", target="_blank") Nick</a>
 	script(src='/javascripts/home.js')
